[package]
name = "aeslib"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"

[dependencies]
clap = "3.2.6"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "1.0.0"